<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/txtSelectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/titleSize"
        android:gravity="center|center_horizontal"
        android:padding="@dimen/margin5dp"
        android:text="@string/txtSelectCategory"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtSize35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5dp"
        android:checkedButton="@id/radBtnGeneral"
        android:padding="@dimen/marginPadding">

        <RadioButton
            android:id="@+id/radBtnGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnGeneral"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnBusiness"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnEntertainment"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnHealth"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnScience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnScience"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnSports"
            android:textSize="@dimen/txtSize" />

        <RadioButton
            android:id="@+id/radBtnTecgnology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/radBtnTech"
            android:textSize="@dimen/txtSize" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin20dp"
        android:padding="@dimen/marginPadding"
        android:text="@string/btnProceed"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtSize" />

</LinearLayout>