<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/marginPadding"
        android:text="@string/txtTitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginPadding"
        android:text="@string/titleDescription"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtSize" />

    <EditText
        android:id="@+id/txtKeyWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/keywords"
        android:inputType="textPersonName"
        android:padding="@dimen/marginPadding"
        android:textSize="@dimen/txtSize" />

    <!--<TextView
        android:id="@+id/txtLocationHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin20dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:text="@string/locationHint"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/margin20dp" />-->

    <Spinner
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:entries="@array/txtGroupLocation"
        android:padding="@dimen/marginPadding"
        android:prompt="@string/prompt" />

    <Button
        android:id="@+id/btnMainpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/marginPadding"
        android:text="@string/btnProceed"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btnSize" />

</LinearLayout>